# subproc_stream

./: .clang-format  .gitignore  CMakeLists.txt  README.md  command.py  pyproject.toml  start.py  testing.py
.github/workflows/: wheels.yml
cmake/: CompileFlags.cmake
examples/: example.cpp  example.py  test_async.py
include/: subproc_stream.hpp
src/: subproc_stream.cpp  subproc_stream_ext.cpp
src/subproc_stream/: __init__.py
