[project]
name = "subproc_stream"
version = "0.1.0"
description = "Python bindings for a unidirectional C++ popen streaming"
authors = [
    {name = "aubuchon-kyle", email = "kdaub.tf2@gmail.com"},
]
dependencies = [
    "scikit-build-core>=0.7.0",
    "nanobind>=1.8.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[tool.pdm]
package-type = "library"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
    "ipynb>=0.5.1",
    "black>=23.12.1",
]
dev = [
    "ipynb>=0.5.1",
    "ipykernel>=6.28.0",
]
zmq = []

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"
cmake.verbose = true
logging.level = "INFO"
# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1
skip =  ["cp38-*", "pp38-*", "cp39-*", "*musllinux*"]

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"

[tool.setuptools.packages.find]
where = ["src/*abi*/"]

[tool.setuptools.package-data]
mypkg = ["*.dll", "*.so"]
